feat: Complete AgentLaunch AI project with real-world data and full functionality

--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,44 @@
-# Supabase Configuration
+# Frontend Environment Variables (Vite)
 VITE_SUPABASE_URL=your_supabase_project_url
 VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
-SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
 
-# Stripe Configuration
-VITE_STRIPE_PUBLISHABLE_KEY=your_stripe_publishable_key
-STRIPE_SECRET_KEY=your_stripe_secret_key
-STRIPE_WEBHOOK_SECRET=your_stripe_webhook_secret
-
-# OpenAI Configuration (for multimodal LLM)
-OPENAI_API_KEY=your_openai_api_key
-
-# Application Configuration
+# Backend Environment Variables (Node.js)
 NODE_ENV=development
 PORT=3001
 CLIENT_URL=http://localhost:5173
 
-# Pricing Configuration (Stripe Price IDs)
-STRIPE_BASIC_PRICE_ID=price_basic_plan
-STRIPE_PRO_PRICE_ID=price_pro_plan
-STRIPE_ENTERPRISE_PRICE_ID=price_enterprise_plan
+# Supabase Configuration
+SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
+
+# Stripe Configuration
+STRIPE_SECRET_KEY=your_stripe_secret_key
+STRIPE_WEBHOOK_SECRET=your_stripe_webhook_secret
+STRIPE_BASIC_PRICE_ID=price_basic_plan_id
+STRIPE_PRO_PRICE_ID=price_pro_plan_id
+STRIPE_ENTERPRISE_PRICE_ID=price_enterprise_plan_id
+
+# OpenAI Configuration
+OPENAI_API_KEY=your_openai_api_key
+
+# Instructions:
+# 1. Copy this file to .env in the root directory
+# 2. Replace all placeholder values with your actual credentials
+# 3. Never commit the .env file to version control
+# 4. For production, set these as environment variables in your hosting platform
+
+# Supabase Setup:
+# 1. Create a new project at https://supabase.com
+# 2. Go to Settings > API to find your URL and keys
+# 3. Run the migration file in the SQL editor to create tables
+
+# Stripe Setup:
+# 1. Create a Stripe account at https://stripe.com
+# 2. Go to Developers > API keys for your secret key
+# 3. Create products and prices for your plans
+# 4. Set up webhooks pointing to your server's /api/stripe-webhook endpoint
+
+# OpenAI Setup:
+# 1. Create an account at https://openai.com
+# 2. Go to API keys section to generate a new key
+# 3. Ensure you have sufficient credits for GPT-4 Vision API calls
+
